--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -97,11 +97,10 @@
 
 \begin{frame}{}
     \begin{block}{Business}
-        \begin{enumerate}
-            \item Business
-            \item Technical
-            \item Academic
-        \end{enumerate}
+		% Business usually handle decision making by making a series of "model changes" which 
+		% are then combined to create a decision process.
+  %       \begin{enumerate}
+  %       \end{enumerate}
     \end{block}
 \end{frame}
 
