--- a/posters/offshore-conference-poster/main.tex
+++ b/posters/offshore-conference-poster/main.tex
@@ -81,25 +81,26 @@
 
 \block{Solution Method}{
 	\input{../../figures/ordinator-architecture.tex}
-	\drawGraph{basis=2cm}
+	\drawGraph{basisinput=4cm}
 }
 
 \block{Case Study: Total Energies}{
 	The proposed system has been developed in collaboration with Total Energies to help optimize there
 	maintenace scheduling operations.
 }
-\block{Future Work}{
-  \begin{itemize}
-    \item Extend the approach to international supply chains.
-    \item Incorporate real-time data analytics for dynamic decision-making.
-    \item Explore applications in other sectors like healthcare and transportation.
-  \end{itemize}
-}
 \block{Results}{
   \begin{itemize}
     \item \textbf{Improved Efficiency}: Achieved a 15\% reduction in total costs across the supply chain.
     \item \textbf{Stakeholder Satisfaction}: Increased satisfaction scores among all actors by 20\%.
     \item \textbf{Collaborative Strategies}: Developed joint policies that benefit all parties.
+  \end{itemize}
+}
+
+\block{Future Work}{
+  \begin{itemize}
+    \item Extend the approach to international supply chains.
+    \item Incorporate real-time data analytics for dynamic decision-making.
+    \item Explore applications in other sectors like healthcare and transportation.
   \end{itemize}
 }
 
