--- a/tex/models/strategic.tex
+++ b/tex/models/strategic.tex
@@ -4,6 +4,7 @@
 	& \text{\rule{\linewidth}{0.4pt}} \notag\\
 	& \textbf{Meta variables:} \notag\\
 	& \ElementScheduler \in \SetScheduler \\
+	& \VarTacticalWork{}{} \\ 
 	& \tau \in [0, \infty] \\
 	& \text{\rule{\linewidth}{0.4pt}} \notag\\
 	& \textbf{Minimize:} \notag                                                                                                                                                        \\
