--- a/tex/models/tactical.tex
+++ b/tex/models/tactical.tex
@@ -2,7 +2,7 @@
 \begin{alignat}{2}
 	& \text{\rule{\linewidth}{0.4pt}} \notag\\
 	& \textbf{Meta variables:}                                                                                                                                                                                                                                                             \notag\\
-	& \ElementScheduler = \SetScheduler                                                                                                                                                                                                                                                    \\
+	& \ElementScheduler \in \SetScheduler                                                                                                                                                                                                                                                    \\
 	& \VarStrategicWorkOrderAssignment{}{}                                                                                                                                                                                                                                                 \\
 	& \tau \in [0, \infty]                                                                                                                                                                                                                                                                 \\
 	& \text{\rule{\linewidth}{0.4pt}} \notag\\
