--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -4,6 +4,7 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{makecell}
 
 \usepackage[T1]{fontenc}
 \usepackage{booktabs}
@@ -153,16 +154,22 @@
 			\drawReactiveConstraints{}
 
 		\begin{itemize}
-
 			\item Mathematical models guide direction but does not provide direct solutions.
 			\item Static solutions are rarely fully executable.
 			\item Dynamic models are less constrained and ensure a contained optimal solution.
+			\item Remember: The real optimial solution is ever knowable at time = 0
 		\end{itemize}
     \end{block}
 \end{frame}
 
 \begin{frame}[t]{}
     \begin{block}{Dynamic }
+    \end{block}
+\end{frame}
+
+\begin{frame}[t]{}
+    \begin{block}{}
+		\input{../../figures/metaheuristic_understanding/quality-versus-time.tex}
     \end{block}
 \end{frame}
 
