--- a/styles/colors.tex
+++ b/styles/colors.tex
@@ -1,7 +1,20 @@
-
-
 \definecolor{red}{HTML}{8A3F3A}
 \definecolor{yellow}{HTML}{E0BB3C}
 \definecolor{blue}{HTML}{4569E0}
 \definecolor{green}{HTML}{17E561}
 \definecolor{other}{HTML}{6A939E}
+
+% DTU Colors
+\definecolor{dtu-corporate-red}{HTML}{990000}
+\definecolor{dtu-white}{HTML}{ffffff}
+\definecolor{dtu-black}{HTML}{000000}
+\definecolor{dtu-blue}{HTML}{2F3EEA}
+\definecolor{dtu-bright-green}{HTML}{1FD082}
+\definecolor{dtu-navy-blue}{HTML}{030F4F}
+\definecolor{dtu-yellow}{HTML}{F6D04D}
+\definecolor{dtu-orange}{HTML}{FC7634}
+\definecolor{dtu-pink}{HTML}{F7BBB1}
+\definecolor{dtu-grey}{HTML}{DADADA}
+\definecolor{dtu-red}{HTML}{E83F48}
+\definecolor{dtu-green}{HTML}{008835}
+\definecolor{dtu-purple}{HTML}{79238E}
