--- a/figures/metaheuristic_understanding/quality-versus-time.tex
+++ b/figures/metaheuristic_understanding/quality-versus-time.tex
@@ -1,9 +1,31 @@
+\input{../../styles/colors.tex}
+\usetikzlibrary{automata,positioning}
+
+\begin{tikzpicture}[on grid, auto, shorten >=1pt]
+    % Draw grid
+    % \draw[very thin,color=gray] (-3,-3) grid (3,3);
+    
+    % Draw axes
+    \draw[->] (-3,-3) -- (3,-3) node[right] {Search Time};
+    \draw[->] (-3,-3) -- (-3,3) node[above] {Quality of Solutions};
+    
+    % Draw ticks
+	\node[draw] (box1) at (-1,-2) {\makecell[c]{Control Problems\\(operational)}};
+	\node[draw] (box2) at (1.0,0) {\makecell[c]{Planning Problems\\(tactical)}};
+	\node[draw] (box3) at (3,2) {\makecell[c]{Design Problems\\(strategic)}};
+
+	\draw[->, thick] (box1) -- (box2);
+	\draw[->, thick] (box2) -- (box3);
+	
+\end{tikzpicture}
+
+
 \usetikzlibrary {positioning}
 \input{../../styles/colors.tex}
 
 \newcommand{\drawReactiveConstraints}[1]{
 	\begin{tikzpicture}[scale=0.6, line width=1.05][
-
+		
 	]
 
 	\node at (0.0 , 1) [above] {Static};
@@ -25,18 +47,13 @@
 	\begin{scope}[shift={(10.5,0.5)}]
 		% \node at (-0.25,1) [right] {};
 		\draw[color=red,fill] (0,0.0)  rectangle  (0.5, -0.5);
-		\node[anchor=west] at (0.5, -0.25) { Static Solution };
+		\node[anchor=west] at (0.5, -0.25) { Static Solution};
 
 		\draw[color=green,fill] (0,-1.0)  rectangle  (0.5, -1.5);
-		\node[anchor=west] at (0.5, -1.25) { Dynamic Solution };
+		\node[anchor=west] at (0.5, -1.25) { Dynamic Solution};
 
 		\draw[color=blue,fill] (0,-2.0)  rectangle  (0.5, -2.5);
-		\node[anchor=west] at (0.5, -2.25) { Unknown Optimal };
-
-		\draw[color=black] (0.25,-3.25)  circle  (0.25);
-		\node[anchor=west] at (0.5, -3.25) { Solution Space };
-
-		
+		\node[anchor=west] at (0.5, -2.25) { Unknown Optimal};
 	\end{scope}
 
     % \shade[ball color=red!50!white,opacity=0.8] (0,0) -- (90:\radius) arc (90:-90:\height) -- cycle;
